--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT = 4408
-MONGO_URI = mongodb+srv://vipin:vipin@mern.27nhcqo.mongodb.net/ecommerce?retryWrites=true&w=majority&appName=MERN
-JWT_SECRET = qwertyuioplkjhgfdszxcvbnma
+PORT =
+MONGO_URI = 
+JWT_SECRET = 
